--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,18 +8,25 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name="com.example.wuxiangyu.MyApp"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+
+        </activity>
+        <activity android:name=".SecondActivity"/>
+        <activity android:name=".ThirdActivity">
+        </activity>
+        <activity android:name="com.example.wuxiangyu.arch.MainActivity">
+        </activity>
+        <activity android:name="com.example.wuxiangyu.daynight.DaynightMainActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SecondActivity"/>
-        <activity android:name=".ThirdActivity">
-        </activity>
-        <activity android:name="com.example.wuxiangyu.arch.MainActivity">
+        <activity android:name="com.example.wuxiangyu.daynight.DaynightSecondActivity">
         </activity>
     </application>
 
