--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         <activity android:name=".ThirdActivity">
         </activity>
         <activity android:name="com.example.wuxiangyu.arch.MainActivity">
+
+        </activity>
+        <activity android:name="com.example.wuxiangyu.StatusBarActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
