--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 27
@@ -55,6 +56,8 @@ dependencies {
     androidTestImplementation deps.support.v4
     androidTestImplementation deps.support.app_compat
     androidTestImplementation deps.support.design
+    implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha03'
+    implementation "android.arch.navigation:navigation-runtime:1.0.0-alpha03"
 }
 repositories {
     mavenCentral()
