--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,12 +18,16 @@
 
         </activity>
         <activity android:name="com.example.wuxiangyu.StatusBarActivity">
+
+        </activity>
+        <activity android:name="com.example.wuxiangyu.navi.NavigationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.example.wuxiangyu.navi.NavigationSecondActivity"/>
     </application>
 
 </manifest>
