--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     androidTestImplementation deps.support.design
     implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha03'
     implementation "android.arch.navigation:navigation-runtime:1.0.0-alpha03"
+    implementation "android.arch.navigation:navigation-ui:1.0.0-alpha01"
 }
 repositories {
     mavenCentral()
