--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,13 +21,15 @@
 
         </activity>
         <activity android:name="com.example.wuxiangyu.navi.NavigationActivity">
+
+        </activity>
+        <activity android:name="com.example.wuxiangyu.navisecond.NavigationsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.wuxiangyu.navisecond.NavigationsActivity"/>
     </application>
 
 </manifest>
