--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,10 @@ dependencies {
     implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha03'
     implementation "android.arch.navigation:navigation-runtime:1.0.0-alpha03"
     implementation "android.arch.navigation:navigation-ui:1.0.0-alpha01"
+
+
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 }
 repositories {
     mavenCentral()
