--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     implementation "android.arch.persistence.room:rxjava2:$room_version"
     implementation "android.arch.persistence.room:guava:$room_version"
     testImplementation "android.arch.persistence.room:testing:$room_version"
+    implementation 'com.facebook.stetho:stetho:1.5.0'
 }
 repositories {
     mavenCentral()
