feat: repository返回到viewmodel使用observer监听，去除callback形式

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,9 @@
         <service android:name="com.example.wuxiangyu.service.TestService">
 
         </service>
+        <activity android:name="com.example.wuxiangyu.MyWebViewActivity">
+
+        </activity>
     </application>
 
 </manifest>
