--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.example.wuxiangyu.first"
+        applicationId "com.example.wuxiangyu.haha"
         minSdkVersion 17
         targetSdkVersion 27
         versionCode 1
