feat: OpenGL Render创建，三个回调的作用

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,9 @@
 
         </activity>
         <activity android:name="com.example.wuxiangyu.media.CameraActivity">
+
+        </activity>
+        <activity android:name="com.example.wuxiangyu.media.opengl.FirstOpenGLProjectActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
