feat: 出现了基本的球桌

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,9 @@
 
         </activity>
         <activity android:name="com.example.wuxiangyu.media.opengl.FirstOpenGLProjectActivity">
+
+        </activity>
+        <activity android:name="com.example.wuxiangyu.media.opengl.raw.AirHockeyActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
