--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,10 @@
         <activity android:name="com.example.wuxiangyu.media.opengl.FirstOpenGLProjectActivity">
 
         </activity>
-        <activity android:name="com.example.wuxiangyu.media.opengl.raw.AirHockeyActivity">
+        <activity android:name="com.example.wuxiangyu.media.opengl.airhockey1.AirHockeyActivity">
+
+        </activity>
+        <activity android:name="com.example.wuxiangyu.media.opengl.airHockey2.AirHockeyActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
