--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,10 +67,7 @@
         </activity>
         <activity android:name="com.example.wuxiangyu.screenon.ScreenOnSetActivity"
             android:launchMode="singleTask">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
         </activity>
         <activity android:name="com.example.wuxiangyu.screenon.ScreenOnShowActivity"
             android:launchMode="singleTask"
@@ -80,6 +77,13 @@
         </activity>
         <activity android:name="com.example.wuxiangyu.media.opengl.airHockey3.AirHockeyActivity">
 
+        </activity>
+
+        <activity android:name="com.example.wuxiangyu.notification.NotificationActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
